<resources>
    <string name="app_name">NBABettingApp</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="teams">Teams</string>
    <string name="games">Games</string>
    <string name="statistics_team">Statistics game</string>
    <string name="check_games">Check games</string>
    <string name="visitor">Visitor</string>
    <string name="home">Home</string>
    <string name="empty_favorite_games">Empty favorite games list(</string>
    <string name="stats">Stats</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="return_to_games">Return to games</string>
    <string name="players">Players</string>
    <string name="empty_favorite_stats_list">Empty favorite stats list((</string>
</resources>