<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:title="@string/teams"
            android:icon="@drawable/ic_baseline_sports_basketball_24"
            android:id="@+id/teams_item"
            />
        <item
            android:title="@string/games"
            android:icon="@drawable/ic_baseline_event_24"
            android:id="@+id/games_item"
            />
        <item
            android:id="@+id/item_stats"
            android:title="@string/stats"
            android:icon="@drawable/ic_baseline_query_stats_24"
            />
        <item
            android:id="@+id/item_privacy"
            android:title="@string/privacy_policy"
            android:icon="@drawable/ic_baseline_privacy_tip_24"
            android:onClick="privacyClick"
            />
    </group>
</menu>