<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="15dp"
    android:elevation="15dp"
    android:paddingHorizontal="10dp"
    android:paddingTop="10dp"
    android:background="@drawable/shape_constraints"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/date_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/team_container"
        />

    <TextView
        android:id="@+id/status_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="end"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/date_game"
        />
    <TextView
        android:id="@+id/season_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/date_game"
        android:gravity="start"
        android:textColor="@color/grey"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".48"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/back_dark_color"
        android:padding="5dp"
        android:elevation="7dp"
        app:layout_constraintBottom_toTopOf="@id/statistics_button"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/home_team_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:padding="5dp"
            />
        <TextView
            android:id="@+id/score_home_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/home_team_name"
            app:layout_constraintBottom_toTopOf="@id/home_team_name"
            android:padding="5dp"
            android:textStyle="bold"
            android:gravity="end"
            android:textColor="@color/white"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/home"
            android:textColor="@color/white"
            android:textStyle="italic"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/team_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".48"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        android:elevation="5dp"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@id/statistics_button"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/visitor_team_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/back_dark_color"
            android:padding="5dp"
            />
        <TextView
            android:id="@+id/score_visitor_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/visitor_team_name"
            app:layout_constraintBottom_toTopOf="@id/visitor_team_name"
            android:padding="5dp"
            android:textStyle="bold"
            android:gravity="start"
            android:textColor="@color/back_dark_color"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/visitor"
            android:textStyle="italic"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/statistics_button"
        android:layout_width="0dp"
        android:background="@drawable/shape_constraints"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintWidth_percent=".7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <ImageView
            android:id="@+id/graph_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent=".19"
            app:layout_constraintDimensionRatio="1"
            android:src="@drawable/graph"
            android:padding="7dp"
            app:layout_constraintStart_toEndOf="@id/text_const"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/todo"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/text_const"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent=".8"
            android:background="@drawable/shape_button"
            app:layout_constraintStart_toStartOf="parent"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:padding="10dp"
                android:gravity="center"
                android:textStyle="italic"
                android:text="@string/statistics_team"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.sackcentury.shinebuttonlib.ShineButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent=".1"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        android:src="@android:color/darker_gray"
        android:id="@+id/add_image_shine"
        app:btn_color="@android:color/darker_gray"
        app:btn_fill_color="@color/orange"
        app:allow_random_color="false"
        app:siShape="@raw/star"/>
</androidx.constraintlayout.widget.ConstraintLayout>