<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.subMenu.StatisticsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:id="@+id/return_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            app:layout_constraintWidth_percent=".15"
            app:layout_constraintDimensionRatio="1"
            android:src="@drawable/ic_baseline_keyboard_return_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/todo"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent=".85"
            app:layout_constraintTop_toTopOf="@id/return_image"
            app:layout_constraintBottom_toBottomOf="@id/return_image"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:textColor="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/return_to_games"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_home_team"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintTop_toBottomOf="@id/return_image"
            android:layout_margin="10dp"
            android:background="@color/back_dark_color"
            android:elevation="10dp"
            android:padding="5dp">
            <ImageView
                android:id="@+id/form_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintWidth_percent=".4"
                app:layout_constraintDimensionRatio="1"
                android:src="@drawable/form"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/todo"
                />
            <TextView
                android:id="@+id/home_team_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/form_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent=".4"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textStyle="italic"
                android:gravity="start"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                app:layout_constraintWidth_percent=".5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/home_team_name"
                android:background="@color/white"
                />
            <TextView
                android:id="@+id/home_team_score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent=".5"
                app:layout_constraintTop_toBottomOf="@id/home_team_name"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/white"
                android:layout_marginTop="15dp"
                android:padding="10dp"
                />
            <TextView
                android:id="@+id/home_team_division"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent=".5"
                app:layout_constraintTop_toBottomOf="@id/home_team_score"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/white"
                android:padding="10dp"
                />
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/form_image"
                android:textColor="@color/white"
                android:text="@string/players"
                android:gravity="center"
                android:textSize="15sp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/white"
                app:layout_constraintTop_toBottomOf="@id/title"
                />
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/home_list_rv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintBottom_toBottomOf="parent"
                />
            <com.ldoublem.loadingviewlib.LVCircular
                android:id="@+id/circular_lv_home"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintWidth_percent=".3"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintWidth_percent=".1"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintTop_toTopOf="@id/home_list_rv"
                app:layout_constraintBottom_toBottomOf="@id/home_list_rv"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_baseline_arrow_right_24"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintTop_toBottomOf="@id/container_home_team"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="10dp"
            android:background="@color/back_dark_color"
            android:elevation="10dp"
            android:padding="5dp">
            <ImageView
                android:id="@+id/form_image_visitor"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintWidth_percent=".4"
                app:layout_constraintDimensionRatio="1"
                android:src="@drawable/form3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/todo"
                />
            <TextView
                android:id="@+id/visitor_team_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/form_image_visitor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent=".4"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textStyle="italic"
                android:gravity="start"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                app:layout_constraintWidth_percent=".5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/visitor_team_name"
                android:background="@color/white"
                />
            <TextView
                android:id="@+id/visitor_team_score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent=".5"
                app:layout_constraintTop_toBottomOf="@id/visitor_team_name"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/white"
                android:layout_marginTop="15dp"
                android:padding="10dp"
                />
            <TextView
                android:id="@+id/visitor_team_division"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent=".5"
                app:layout_constraintTop_toBottomOf="@id/visitor_team_score"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/white"
                android:padding="10dp"
                />
            <TextView
                android:id="@+id/title_visitor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/form_image_visitor"
                android:textColor="@color/white"
                android:text="@string/players"
                android:gravity="center"
                android:textSize="15sp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/white"
                app:layout_constraintTop_toBottomOf="@id/title_visitor"
                />
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/visitor_list_rv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/title_visitor"
                app:layout_constraintBottom_toBottomOf="parent"
                />
            <com.ldoublem.loadingviewlib.LVCircular
                android:id="@+id/circular_lv_visitor"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintWidth_percent=".3"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintTop_toBottomOf="@id/title_visitor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintWidth_percent=".1"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintTop_toTopOf="@id/visitor_list_rv"
                app:layout_constraintBottom_toBottomOf="@id/visitor_list_rv"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_baseline_arrow_right_24"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>